@@ -1,5 +1,6 @@
 \name{invlogit}
 \alias{invlogit}
+\alias{logit}
 
 \title{Inverse logistic function}
 
