@@ -1,6 +1,11 @@
 2008-7-21  Yu-Sung Su     <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 1.1-14.
+    * make all internal function start with .
+    * add keyword manip to the docs
     * man/balance: doc for balance().
+    * export logit(x) for use.
+    * man/array.append: doc for array.append
+    * R/array.append: new function to add array to the existing one.
     * R/coefplot: fix when plot=FALSE, should not plot varnames. 
     * R/balanceplot: obsolet!
     * R/balance: new function that computes, print and plot the balance stats
